Redid the html file and setup HTML structure for the drawing application

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Interactive Drawing Application</title>
 </head>
 <body>
-    
-</body>
-</html>
+    <h1>Interactive Drawing Application</h1>
+    <div>
+        <label>
+            <input type="radio" name="shape" value="line" checked> Line
+        </label>
+        <label>
+            <input type="radio" name="shape" value="rectangle"> Rectangle
+        </label>
+        <
